@@ -3,4 +3,4 @@ require 'rbconfig'
 if CONFIG['CC'] == 'gcc'
   CONFIG['CC'] = 'gcc -Wall '
 end
-create_makefile 'amatch' 
+create_makefile 'amatch_ext' 
