@@ -1,0 +1,3 @@
+module Amatch
+end
+require 'amatch_ext'
