@@ -1,0 +1,4 @@
+require 'amatch_ext'
+class ::String
+  include ::Amatch::StringMethods
+end
