@@ -1,6 +1,6 @@
 module Amatch
   # Amatch version
-  VERSION         = '0.2.8'
+  VERSION         = '0.2.9'
   VERSION_ARRAY   = VERSION.split(/\./).map { |x| x.to_i } # :nodoc:
   VERSION_MAJOR   = VERSION_ARRAY[0] # :nodoc:
   VERSION_MINOR   = VERSION_ARRAY[1] # :nodoc:
