@@ -1,3 +1,10 @@
+2011-11-14 (0.2.9)
+    * Provide amatch/rude and amatch/polite for require (the latter doesn't
+      extend ::String on its own)
+    * pair_distance_similar method now can take an optional regexp argument for
+      tokenizing.
+2011-09-26 (0.2.8)
+    * Depend on tins library.
 2011-08-06 (0.2.7)
     * Fix some violations of ISO C90 standard.
 2011-07-16 (0.2.6)
